--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ h1 {
     position: relative;
     border: lightgray solid 1px;
     border-radius: 3px;
-    box-shadow: 0px 0px 2px 1px grey;;
+    box-shadow: 0px 0px 2px 1px grey;
+    margin-bottom: 10px;
 }
 
 input {
@@ -61,7 +62,7 @@ button {
 
 .task-container {
     padding-top: 10px;
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
     display: flex;
     justify-content: center;
     position: relative;
@@ -70,24 +71,29 @@ button {
     color: rgb(88, 85, 85);
 }
 
+.tasks-container {
+    margin-bottom: 20px;
+}
+
 .todo-text {
     flex-grow: 1;
 }
 
 .delete {
-    width: 18px;
-    color: red;
+    width: 15px;
+    /* color: red; */
     filter: invert(50%);
 }
 
 .done {
     padding-left: 5px;
-    width: 30px;
+    width: 25px;
     cursor: pointer;
+    filter: invert(50%);
     /* -webkit-appearance: none;
     -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
-    filter: invert(50%); */
+    
     /* filter: grayscale(0); */
     /* filter: hue-rotate(100deg); */
     /* filter: brightness(100%) sepia(1); */
